[package]
name = "vue-rust-mvt-postgis"
version = "2.0.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["John Campbell <johncampbell@geospatialweb.ca> <http://www.linkedin.com/in/geospatialweb>"]
repository = "https://gitlab.com/geospatialweb/vue-rust-mvt-postgis"
homepage = "https://www.geospatialweb.ca/"
license = "MIT"
publish = false

[dependencies]
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
garde = { version = "0.20", features = ["derive", "email"] }
geojson = "0.24"
jsonwebtoken = "9"
once_cell = "1"
openssl = { version = "0.10", features = ["vendored"] }
rust-argon2 = "2"
salvo = { version = "0.74", features = [
    "affix-state",
    "cache",
    "compression",
    "cors",
    "jwt-auth",
    "logging",
    "rustls",
    "test",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[lints.rust]
unsafe_code = "forbid"
