[package]
name = "vue-rust-mvt-postgis"
version = "3.0.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["John Campbell <johncampbell@geospatialweb.ca> <http://www.linkedin.com/in/geospatialweb>"]
repository = "https://gitlab.com/geospatialweb/vue-rust-mvt-postgis"
homepage = "https://www.geospatialweb.ca/"
license = "MIT"
publish = false

[dependencies]
chrono = "0.4.39"
dotenvy = "0.15.7"
envy = "0.4.2"
garde = { version = "0.22.0", features = ["derive", "email"] }
geojson = "0.24.1"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
openssl = { version = "0.10.71", features = ["vendored"] }
rust-argon2 = "2.1.0"
salvo = { version = "0.76.2", features = [
    "affix-state",
    "cors",
    "jwt-auth",
    "logging",
    "rustls",
    "test",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[lints.rust]
unsafe_code = "forbid"
